--- a/index.css
+++ b/index.css
@@ -221,14 +221,14 @@ a:hover{
 
 .cardImagen1{
     grid-area: imagen;
-    background-image: url("/GallucciNahuel/imagenes/recetas/Cuadrada 24_Cacerola 18_Bowls_Aqua_Cookies y huevo de pascuas.jpg");
+    background-image: url("../../GallucciNahuel/imagenes/recetas/Cuadrada 24_Cacerola 18_Bowls_Aqua_Cookies y huevo de pascuas.jpg");
     width: 100%;
     height: 100%;
     background-size: cover;
 }
 .cardImagen2{
     grid-area: imagen;
-    background-image: url("/GallucciNahuel/imagenes/recetas/Sarten 31_Aqua_Pizza napolitana.jpg");
+    background-image: url("./GallucciNahuel/imagenes/recetas/Cuadrada 24_Cacerola 18_Bowls_Terra_Milanesas de merluza con pure mixto_pascuas.jpg");
     width: 100%;
     height: 100%;
     background-size: cover;
