--- a/index.css
+++ b/index.css
@@ -84,10 +84,12 @@ li a{
     font-weight: bold;
     background-color: #B5EAEA;
     font-size: 20px;
+    transition: font-size .5s;
 }
 
 a:hover{
     color: #FFBCBC;
+    font-size: 22px;
 }
 
 .banner{
@@ -203,7 +205,10 @@ a:hover{
     background-color: #FFBCBC;
     justify-content: space-around;
     flex-wrap: wrap;
+    
 }
+
+
 
 .cardRecetas{
     width: 25%;
@@ -216,6 +221,11 @@ a:hover{
     grid-template-rows: 70% 30%;
     box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
     text-align: center;
+    transition: all 1000ms;
+}
+
+.cardRecetas:hover{
+    transform: translateY(-20px);
 }
 
 
@@ -272,7 +282,13 @@ a:hover{
     grid-template-rows: 10% 90%;
     box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
     text-align: center;
+    transition: all 1000ms;
 }
+
+.cardBlog:hover{
+    transform: translateY(-20px);
+}
+
 
 .cardBlogImagen{
     grid-area: imagen;
